# crimeline

./: Cargo.toml  README.md  mise.toml
benches/: arena.rs  timeline.rs  usermap.rs
examples/: footprint.rs  timeline.rs
src/: lib.rs  stats.rs  usage.rs
src/content/: arena.rs  blobs.rs  mod.rs  order.rs  span.rs  timeline.rs  window.rs
src/users/: map.rs  mod.rs  relationships.rs  shard.rs  sharding.rs
